Rewrite README for Galette-based Knarr
Existing README said "requires Java 8, Phosphor"; the post-port
codebase runs on Java 17+ via Galette. New README covers:

- the architecture (client → Green Expression → TCP → Z3 server)
- requirements incl. the two non-Central deps (green-solver and the
  Z3 4.8.9 jar) that need local-m2 provisioning
- build and test steps (including the galette-maven-plugin
  instrumented-JDK cache)
- a minimal usage example for Symbolicator + dumpConstraints
- the non-obvious JVM flags (-Xbootclasspath/a, -javaagent,
  --add-opens java.base/java.lang)
- known gaps (onArrayStore value, onIinc semantics, in-process
  Z3+Galette conflict, E2E test)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>